[tool.poetry]
name = "reminder-app"
version = "3.11.2"
description = ""
authors = ["Kostya Dmitriev <dmitrievkons2000@gmail.com>"]
readme = "README.md"
packages = [{include = "reminder_app"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
