[tool.poetry]
name = "reminder-app"
version = "3.11.2"
description = ""
authors = ["Kostya Dmitriev <dmitrievkons2000@gmail.com>"]
readme = "README.md"
packages = [{include = "reminder_app_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
